# sail-xisa

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  README.md  dev.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-devcontainer.yml  ci.yml  devcontainer.yml  web.yml
docs/: conventions.md  coverage.md  dev-commands.md  modeling-decisions.md  spec-coverage.md  todo.md
docs/plans/: 2026-03-31-ci-and-formatter.md  2026-03-31-parser-arith-logic.md  2026-03-31-parser-vertical-slice.md  2026-03-31-stc-stci-plan.md  2026-04-01-binary-encoding-plan.md  2026-04-01-compound-instructions-plan.md  2026-04-01-extmap-movmap-plan.md  2026-04-01-hdr-sth-stch-plan.md  2026-04-01-movl-movr-plan.md  2026-04-01-pseek-plan.md  2026-04-01-st-sti-plan.md  2026-04-01-transition-table-nxtp-plan.md  2026-04-01-web-playground-plan.md
docs/specs/: 2026-03-31-branch-instructions-design.md  2026-03-31-ci-and-formatter-design.md  2026-03-31-fetch-decode-execute-design.md  2026-03-31-parser-arith-logic-design.md  2026-03-31-sail-xisa-design.md  2026-03-31-stc-stci-design.md  2026-04-01-binary-encoding-design.md  2026-04-01-cd-modifier-batch-plan.md  2026-04-01-compound-instructions-design.md  2026-04-01-extmap-movmap-design.md  2026-04-01-hdr-sth-stch-design.md  2026-04-01-map-bit-manipulation-design.md  2026-04-01-map-foundation-design.md  2026-04-01-map-foundation-plan.md  2026-04-01-movl-movr-design.md  2026-04-01-pseek-design.md  2026-04-01-st-sti-design.md  2026-04-01-transition-table-nxtp-design.md  2026-04-01-web-playground-design.md  2026-04-03-spec-page-design.md  2026-04-03-spec-page-plan.md  2026-04-04-diff-testing-design.md  2026-04-04-diff-testing-plan.md  2026-04-04-playground-refactor-design.md  2026-04-04-playground-refactor-plan.md  2026-04-04-proptest-design.md  2026-04-04-proptest-plan.md
model/: main.sail  prelude.sail
model/map/: decode.sail  exec.sail  insts.sail  state.sail  types.sail
model/parser/: decode.sail  exec.sail  insts.sail  params.sail  pseek.sail  state.sail  transition.sail  types.sail
playground/: Cargo.toml
playground/examples/: extract-ipv4.xisa  simple-branch.xisa
playground/src/: assembler.rs  decode.rs  diff.rs  execute.rs  lib.rs  state.rs  types.rs
playground/tests/: diff_test.rs  proptest_assemble.rs  proptest_encode_decode.rs
playground/tests/common/: mod.rs
scripts/: format.sh  generate-sail-doc.sh
test/: CMakeLists.txt
test/diff/: harness.c  main.sail
test/map/: test_add.sail  test_br.sail  test_cmp.sail  test_concat.sail  test_encoding.sail  test_ffi.sail  test_logic.sail  test_mov.sail  test_nop_halt.sail  test_program.sail  test_shift.sail  test_sub.sail
test/parser/: test_add.sail  test_and.sail  test_br.sail  test_brbtst.sail  test_cmp.sail  test_cnct.sail  test_compound.sail  test_encoding.sail  test_ext.sail  test_ext_edge.sail  test_extmap_movmap.sail  test_halt.sail  test_integration.sail  test_mov.sail  test_movl_movr.sail  test_nop.sail  test_nxtp.sail  test_or.sail  test_program.sail  test_pseek.sail  test_st.sail  test_stc.sail  test_sth.sail  test_sub.sail
tools/: format.sh
web/: .gitignore  astro.config.mjs  package-lock.json  package.json
web/public/styles/: global.css  playground.css  spec.css
web/simulator/: Cargo.toml
web/simulator/src/: encode.rs  lib.rs  state.rs
web/src/components/: Controls.svelte  Editor.svelte  Playground.svelte  StateViewer.svelte
web/src/layouts/: Base.astro
web/src/lib/: wasm.ts
web/src/pages/: index.astro  playground.astro  spec.astro
web/wasm/: Cargo.toml
web/wasm/src/: lib.rs
